# new_energy_coder_club

./: .gitignore  .gitmodules  .readthedocs.yaml  2025 Hi-Car_Pi 5 版本 开源进度.md  24CServo-uart.ino  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  IOT设计文档.docx  LICENSE  LICENSE 关于这个项目的故事.md  LICENSE.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  SolarPVMPPTBoost.slxc  aut_ut_veritatis_ea_commodi_et_aut_0.md  git-download.html  install.ps1  install.sh  molestiae_rerum_repudiandae_tenetur_sit_quod_voluptatibus_3.md  molestiae_sunt_dolorum_culpa_vero_enim_quidem_1.md  platformio.ini  qui_et_quas_officia_illum_quidem_sed_0.md  quod_aliquam_ut_laborum_voluptates_saepe_et_2.md  无线烧录配置说明.md  附件2：高校报名表（需签章）.doc  附件3：高校推荐汇总表（需签章）.xlsx  附件5：社会实践类报告格式.docx  附件5：社会实践类申报书（需签章）.docx
.github/: ISSUE_WORKFLOW.md  PULL_REQUEST_TEMPLATE.md  labels_progress.json  weekly_report_template.md
2024ROBOCON/: .readme.md.un~  readme.md  readme.md~
2024全国机器人大赛_ROBOCON/: readme.md
2024全国机器人竞赛_ROBOCON/: readme.md
2024华为云（化工行业人工智能应用）/: Readme.md
2024年全国大学生物联网设计竞赛（华为杯）/: Readme.md
2024智能车室外赛比赛/: @杨鑫海 微雪电机驱动.md  README.MD   README.md  Readme.md   微雪电机驱动.md
2024物联网设计竞赛_Huawei数通/: README_File.md  Readme.md  作品创意表.md
2024物联网设计竞赛（Huawei数通）/: Readme.md
2024物联网设计竞赛（华为杯）/: Readme.md
2024电赛预选_EB25-SIG/: README.md
2024电赛预选（EB25-星闪SIG）/: README.md
2024节能减排大赛_Nearlink小车/: README.md
2025 开源进度/: Readme.md
2025.3.10 交通 NEC省赛 I 级 C类/: .keep  Readme.md
2025全国机器人竞赛-ROBOCON/: Adurino  Readme.md  竞技赛主题与规则V3.md  队伍结构.md
2025全国机器人竞赛_ROBOCON/: Readme.md  竞技赛主题与规则V3.md
2025节能减排大赛_交通机器人/: Readme.md
Image/: README.md
Project_5-axis-fluid-workstation_流体工作站/: README.md
Project_MechDog机器狗_K230_KFS/: README.md
competition_2024全国机器人竞赛_ROBOCON/: readme.md
competition_2025全国机器人竞赛_ROBOCON/: Readme.md  上位机组.md  硬件组.md
projects/templates/ai_project_template/: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
projects/templates/ai_project_template/config/: config.yaml
(+304 files in other folders)
